--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>{{site.title}}-{{page.title}}</title>
+    <title></title>
 </head>
 <body>
-    <h4>{{site.title}}-{{page.title}}</h4>
+    <h4>kkk</h4>
 </body>
 </html>
