--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,6 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <title>{{site.title}}</title>
@@ -9,15 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="css/default.css">
-    <link rel="stylesheet" href="css/index.css">
-
+    <link rel="stylesheet" href="{{site.url}}/css/default.css">
+    <link rel="stylesheet" href="{{site.url}}/css/post.css">
 </head>
 
 <body>
     <div class="page">
         {% include header.html %}
         <div class="container">
+            <h1 class="postTitle">{{page.title}}</h1>
+            <header>
+                <span class="postDate">{{page.date | date_to_string}}</span>
+            </header> 
             {{content}}
         </div>
 
