--- a/css/post.scss
+++ b/css/post.scss
@@ -17,7 +17,7 @@
         }
         .social-list{
             position: absolute;
-            top: 0;
+            top: -2px;
             right: 0;
         }
     }
