--- a/css/default.scss
+++ b/css/default.scss
@@ -4,6 +4,7 @@
 html {
     -ms-text-size-adjust: 100%;
     -webkit-text-size-adjust: 100%;
+    font-family: Proggy;
 }
 
 * {
@@ -14,7 +15,7 @@ html {
 
 a,a:visited{
     text-decoration: none;
-    color: black;
+    color: #222222;
 }
 a:hover,a:active{
     text-decoration: none;
