--- a/_includes/posts.html
+++ b/_includes/posts.html
@@ -4,7 +4,7 @@
         <header>
             <span class="postDate">{{post.date | date_to_string}}</span>
         </header>
-        <a class="postTitle" href="{{post.url}}" title="{{post.title}}">{{post.title|upcase}}</a>
+        <a class="postTitle" href="{{post.url}}" title="{{post.title}}">{{post.title}}</a>
     </section>
     {% endfor %}
 </main>
