--- a/css/default.scss
+++ b/css/default.scss
@@ -4,7 +4,6 @@
 html {
     -ms-text-size-adjust: 100%;
     -webkit-text-size-adjust: 100%;
-    font-family: Proggy;
 }
 
 * {
@@ -15,7 +14,7 @@ html {
 
 a,a:visited{
     text-decoration: none;
-    color: #222222;
+    color: black;
 }
 a:hover,a:active{
     text-decoration: none;
