--- a/css/index.scss
+++ b/css/index.scss
@@ -12,11 +12,9 @@
 
         #title{
             padding-left: 0;
-            font-size: 0.9em;
-            line-height: 0.9em;
-            letter-spacing: 0.4em;
-            color: #666666;
-            font-family: Verdana, Geneva, Tahoma, sans-serif;
+            font-size: 1.125em;
+            line-height: 1.125em;
+            letter-spacing: 0.5em;
         }
         .social-list{    
             position: absolute;
@@ -31,20 +29,18 @@
         .post-item{
             padding-top: 1.6em;
             padding-bottom: 1.6em;
-            border-bottom: 1px solid lightgray;
+            border-bottom: 1px solid gray;
         
             .postDate{
-                font-size: 0.5em;
+                font-size: 0.6em;
                 letter-spacing: 0.2em;
                 color: gray;
             }
             .postTitle{
                 display: block;
                 margin-top: 0.625em;
-                font-size: 1.2em;
-                letter-spacing: 0.2em;
-               
-                font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+                font-size: 1.125em;
+                letter-spacing: 0.25em;
             }
         }
         
