--- a/css/default.scss
+++ b/css/default.scss
@@ -14,7 +14,7 @@ html {
 
 a,a:visited{
     text-decoration: none;
-    color: black;
+    color: #222222;
 }
 a:hover,a:active{
     text-decoration: none;
