--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,6 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="{{site.url}}/css/default.css">
     <link rel="stylesheet" href="{{site.url}}/css/post.css">
+    <link rel="stylesheet" href="{{site.url}}/css/rouge.css">
 </head>
 
 <body>
