--- a/css/post.scss
+++ b/css/post.scss
@@ -6,6 +6,7 @@
     padding: 20px;
     padding-top: 2.6em;
     max-width: 960px;
+   
 
     .masthead{
         position: relative;
@@ -32,7 +33,8 @@
             font-size: 1em;
             letter-spacing: 0.05em;
             line-height: 2em;
-            padding-top: 1.6em;
+            margin-top: 1.6em;
+            margin-bottom: 1.6em;
             color: black;
         }
         a,a:visited{
