--- a/css/index.scss
+++ b/css/index.scss
@@ -20,7 +20,7 @@
         }
         .social-list{    
             position: absolute;
-            top: -2px;
+            top: -4px;
             right: 0;
         }
     }
@@ -31,7 +31,7 @@
         .post-item{
             padding-top: 1.6em;
             padding-bottom: 1.6em;
-            border-bottom: 1px solid lightgray;
+            border-bottom: 1px solid whitesmoke;
         
             .postDate{
                 font-size: 0.6em;
