--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,7 +15,7 @@
     <div class="page">
         {% include header.html %}
         <div class="container">
-            <h1 class="postTitle">{{page.title}}</h1>
+            <h1 class="postTitle">{{page.title|upcase}}</h1>
             <header>
                 <span class="postDate">{{page.date | date_to_string}}</span>
             </header> 
