--- a/css/post.scss
+++ b/css/post.scss
@@ -37,6 +37,69 @@
             margin-bottom: 1.6em;
             color: black;
         }
+
+        blockquote{
+            margin: 2.2em 0;
+            padding-left: 20px;
+            border-left: 5px solid #e6e6e6;
+            p{
+                color: #888;
+            }
+        }
+
+        h1,h2,h3,h4,h5,h6{
+            margin: 20px 0;
+        }
+
+        h2{
+            position: relative;
+            display: block;
+            -webkit-margin-before: 0.83em;
+            -webkit-margin-after: 0.83em;
+            -webkit-margin-start: 0px;
+            -webkit-margin-end: 0px;
+            letter-spacing: 1px;
+            font-weight: 400;
+            //line-height: 0.98em;
+           // padding-left: 10px; 
+           // border-left: 5px solid red;
+        }
+        h2::before{
+            content: '';
+            border-left: 5px solid red;
+            position: absolute;
+            left: -15px;
+            height: 75%;
+            top: 12%;
+        }
+       
+        ul{
+            display: block;
+            // -webkit-margin-before: 0.3em;
+            // -webkit-margin-after: 0.3em;
+            -webkit-margin-start: 0px;
+            -webkit-margin-end: 0px;
+            -webkit-padding-start: 10px;
+            li{
+                display: block;
+                margin: 1.4em 0;
+                position: relative;
+                ul{
+                    margin-left: 30px;
+                }
+            }
+            li::before {
+                position: absolute;
+                font-weight: 600;
+                content: " · ";
+                left: -10px;
+                margin: 0px;
+            }
+        }
+        ol{
+            list-style-type: lower-roman;
+        }
+      
         a,a:visited{
             color: red;
         }
