--- a/css/rouge.css
+++ b/css/rouge.css
@@ -5,7 +5,7 @@
   margin: 0 5px;
   font-size: 0.88em;
   background-color: #eee;
-  color: orangered;
+  color: black;
   font-weight: 400;
   font-family: Menlo;
 }
